# tg-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml  railway.toml  railway.worker.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
bot/: __main__.py
bot/core/: bot.py  config.py  dispatcher.py
bot/filters/: admin.py
bot/handlers/: admin.py  campaigns.py  chats.py  posts.py  sessions.py  settings.py  start.py  stats.py
bot/keyboards/: campaigns_kb.py  chats_kb.py  main_menu.py  posts_kb.py  sessions_kb.py  settings_kb.py  utils.py
bot/middlewares/: subscription.py  throttle.py  user.py
bot/states/: fsm.py
db/: models.py  session.py
db/migrations/: env.py
db/repositories/: campaign_repo.py  chat_repo.py  post_repo.py  session_repo.py  user_repo.py  user_settings_repo.py
docker/: Dockerfile
scripts/: migrate.py
services/: cache.py  chat_resolver.py  crypto.py  session_auth.py  session_client.py  subscription.py
tests/: conftest.py
tests/integration/: conftest.py  test_campaign_repo.py  test_chat_repo.py  test_post_repo.py  test_session_repo.py  test_user_repo.py
tests/unit/: test_admin_filter.py  test_broadcaster.py  test_broadcaster_delay.py  test_chat_resolver.py  test_crypto.py  test_keyboards.py  test_middlewares.py  test_models.py  test_otp_sanitize.py  test_repos_unit.py  test_session_auth.py  test_session_pool.py  test_subscription.py
worker/: __main__.py  broadcaster.py  scheduler.py  session_pool.py
(+6 files in other folders)
