[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-broadcast-bot"
version = "1.0.0"
description = "Production-ready Telegram broadcast bot with multi-session support"
requires-python = ">=3.11"
dependencies = [
    # Bot framework
    "aiogram==3.13.1",
    # Telegram user client
    "telethon==1.36.0",
    # Database
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    # Cache / FSM storage
    "redis==5.2.0",
    # Scheduler
    "apscheduler==3.10.4",
    # Config
    "pydantic-settings==2.6.1",
    # Encryption (StringSession)
    "cryptography==43.0.3",
    # QR code generation
    "qrcode[pil]==8.0",
    "pillow==11.0.0",
    # Utilities
    "cachetools==5.5.0",
    "python-dotenv==1.0.1",
    "structlog==24.4.0",
    "aiofiles==24.1.0",
    # Alembic sync driver
    "psycopg2-binary==2.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "types-redis==4.6.0.20241004",
    "factory-boy==3.3.1",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
